Bug 31781 - Missing math functions in libm.a
Summary: Missing math functions in libm.a
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: math (show other bugs)
Version: 2.40
: P2 normal
Target Milestone: 2.40
Assignee: Not yet assigned to anyone
URL:
Keywords:
: 31779 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-05-21 15:27 UTC by H.J. Lu
Modified: 2024-05-23 16:07 UTC (History)
1 user (show)

See Also:
Host:
Target: alpha, s390, sparcv9
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2024-05-21 15:27:29 UTC
copysignf128 frexpf128 modff128 scalbnf128 are missing in alpha libm.a
Comment 1 H.J. Lu 2024-05-21 19:49:59 UTC
The updated missing list is

copysignf128 copysignf64x frexpf128 frexpf64x modff128 modff64x
Comment 2 H.J. Lu 2024-05-23 16:01:49 UTC
*** Bug 31779 has been marked as a duplicate of this bug. ***
Comment 3 Adhemerval Zanella 2024-05-23 16:07:48 UTC
Fixed on 2.40.